# yesterday

./: .env  .gitignore  Dockerfile  Procfile  README.md  app.yaml  one-paper.md  package-lock.json  package.json  pyproject.toml  requirements.txt  script.ps1  supervisord.conf  temp.py  yesterday-fb2b6-firebase-adminsdk-fbsvc-60ea20dd7d.json
.gemini/: GEMINI.md  settings.json
app/: PrivacyPolicy.html  d.json  kma_grid.py  kma_life_index.py  kma_weather.py  logger.py  main.py  meteo_weather.py  push.py  scheduler.py  storage.py  tasks.py  weather.py
backend/: Dockerfile  requirements.txt
backend/app/: logger.py  main.py  weather.py
mobile/: .env  App.tsx  app.config.ts  app.json  eas.json  google-services.json  package-lock.json  package.json  tailwind.config.js
mobile/android/: gradle.properties  settings.gradle
mobile/android/app/: build.gradle
mobile/app/: NotificationSettings.tsx  TemperatureChart.tsx  _layout.tsx  history.tsx  index.tsx  main.tsx  settings.tsx
mobile/app/screens/: ChartScreen.tsx  NotificationSettings.tsx  RenderWidget.tsx  main.tsx
mobile/app/widget/: TempWidget.tsx
mobile/app/widgetHandler/: TempWidgetHandler.tsx
mobile/components/: DiffCard.tsx  EnvCard.tsx  ExtremesCard.tsx  HourlyChart.tsx
mobile/components/ui/: DiffBadge.tsx  (+2 more)
mobile/constants/: colors.ts  fonts.ts
mobile/services/: notification.ts  weather.ts  weather_.ts
mobile/styles/: appMainStyles.ts
mobile/utils/: date.ts
mobile_copy/: App.tsx  app.json  package.json
web/: .env  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
(+15 files in other folders)
