[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.2",
    "firebase-admin==6.5.0",
    "meteostat==1.6.8",
    "python-dotenv==1.0.1",
    "pytz==2024.1",
    "redis==5.0.4",
    "requests==2.31.0",
    "timezonefinder==6.4.1",
    "uvicorn[standard]==0.29.0",
]
